# PBRT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/resources/car/: mkz_wq.glb  mkz_wq.gltf
src/shaders/: StandardPbr.fs  StandardPbr.vs  offtex.fs
src/utils/: gltfmodel.h  mesh.h  model.h  root_directory.h
